salesforce-app/src/objects/Taro_Order_Line_item__c.object
<CustomObject>
    <description>Information about a specific product on an order, such as the quantity ordered and quantity received.</description>
    <fields>
        <fullName>Destination_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory where the product should be delivered.</description>
        <label>Destination Inventory</label>
        <referenceTo>Taro_Inventory__c</referenceTo>
        <relationshipLabel>Taro Order Line items (Destination Inventory)</relationshipLabel>
        <relationshipName>Taro_Order_Line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Qty_Delivered__c</fullName>
        <description>Quantity received last against this order line item.</description>
        <label>Last Qty Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product ordered.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Taro Order Line items</relationshipLabel>
        <relationshipName>Taro_Order_Line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_Delivered__c</fullName>
        <description>Quantity of product that has been delivered.</description>
        <label>Qty Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Ordered__c</fullName>
        <description>Quantity of product that has been ordered.</description>
        <label>Qty Ordered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Outstanding__c</fullName>
        <description>Quantity that was ordered but not delivered.</description>
        <formula>Qty_Ordered__c  -  Qty_Delivered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shorted_Delivery_Reason__c</fullName>
        <description>Reason for the shorted delivery</description>
        <label>Shorted Delivery Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No Stock Available</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shorted_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the order line item is complete and the quantity delivered is less than the quantity ordered, it is a shorted delivery.</description>
        <label>Shorted Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory where order will be fulfilled from.</description>
        <label>Source Inventory</label>
        <referenceTo>Taro_Inventory__c</referenceTo>
        <relationshipLabel>Taro Order Line items (Source Inventory)</relationshipLabel>
        <relationshipName>Taro_Order_Line_items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates the progress of the order line item. When a order line item reaches a completed or cancelled status no further action can be taken on that line item.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taro_Order__c</fullName>
        <description>The order that the order line item belongs to.</description>
        <label>Taro Order</label>
        <referenceTo>Taro_Order__c</referenceTo>
        <relationshipLabel>Taro Order Line items</relationshipLabel>
        <relationshipName>Taro_Order_Line_items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Taro Order Line item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Order Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taro Order Line items</pluralLabel>
    <recordTypes>
        <fullName>Purchase_Order</fullName>
        <active>true</active>
        <description>When a quantity is received against a Purchase Order line item, the associated destination inventory is increased.</description>
        <label>Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Order</fullName>
        <active>true</active>
        <description>When a quantity is received against a Sales Order line item, the associated source inventory is relieved.</description>
        <label>Sales Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer_Order</fullName>
        <active>true</active>
        <description>When a quantity is received against a Transfer Order line item, the associated source inventory is relieved and destination inventory increased.</description>
        <label>Transfer Order</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>